# ChangeLog for sys-power/apcupsd
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-power/apcupsd/ChangeLog,v 1.65 2011/03/14 20:37:14 flameeyes Exp $

*apcupsd-3.14.8-r1 (14 Mar 2011)

  14 Mar 2011; Diego E. Pettenò <flameeyes@gentoo.org> apcupsd-3.14.7.ebuild,
  -apcupsd-3.14.8.ebuild, +apcupsd-3.14.8-r1.ebuild:
  Old version: depend on gtk2/glib2 only. Revision bump: implement the kernel
  configuration checks as per bug #296476; don't use webapp-config as the CGIs
  can only be configured with the system configuration files in /etc; drop the
  HAL configuration file; disable strict aliasing.

  06 Mar 2010; Raúl Porcel <armin76@gentoo.org> apcupsd-3.14.7.ebuild:
  alpha stable

*apcupsd-3.14.8 (17 Jan 2010)

  17 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +apcupsd-3.14.8.ebuild:
  Version bump.

  29 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  -apcupsd-3.14.6.ebuild:
  Cleanup old version.

  29 Dec 2009; Raúl Porcel <armin76@gentoo.org> apcupsd-3.14.7.ebuild:
  sparc stable wrt #295424

  16 Dec 2009; Markus Meier <maekke@gentoo.org> apcupsd-3.14.7.ebuild:
  amd64/x86 stable, bug #295424

  08 Dec 2009; nixnut <nixnut@gentoo.org> apcupsd-3.14.7.ebuild:
  ppc stable #295424

  03 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  -files/3.10.18/apache.conf, -apcupsd-3.10.18-r1.ebuild,
  -files/3.10.18/apcupsd.in.patch, -apcupsd-3.14.5-r2.ebuild,
  -files/3.10.18/apcupsd-lighttpd.conf, -files/3.10.18/smtp.patch:
  Remove older versions, leave current stable and stable target.

  18 Nov 2009; Raúl Porcel <armin76@gentoo.org> apcupsd-3.14.6.ebuild:
  sparc stable wrt #280300

  24 Sep 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  apcupsd-3.14.7.ebuild:
  Create /var/lock if it's not present already.

  31 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  apcupsd-3.14.6.ebuild:
  stable x86, bug 280300

  09 Aug 2009; nixnut <nixnut@gentoo.org> apcupsd-3.14.6.ebuild: