@@ -5,14 +5,14 @@ AUX apcupsd.init.2 838 RMD160 fdca4e15d5f475c43147ce65624a4355e6ed9279 SHA1 b345
 AUX apcupsd.powerfail.init 520 RMD160 24f766871652220523a18885f41f6608f29ab670 SHA1 0c5f97e556504904ffd6d72ff27ef792ac70e18c SHA256 eee773aa07175674085cb0ab7ed2c071fcc04fc05383d368f38d056e7327ff35
 DIST apcupsd-3.14.7.tar.gz 4272089 RMD160 cb3db3e6e123f39666eef3c5ccfdec65c57a1571 SHA1 9561eb5cf8e0c627215b987dbb97d026a2b2e9b8 SHA256 7e3df3b5552394206f4b8aaac2bd85ac69df540495557676a3df63f84972823c
 DIST apcupsd-3.14.8.tar.gz 1317601 RMD160 f642582e01506ebb986c16df01429e6bb08c7e8b SHA1 cb7a7b401797e129c92a6b8dc2bf7b193b1d6c72 SHA256 8e7f2574d3abaf6637da3e790860c3f9ba64fab1ec7e50bb080de4439441c5a7
-EBUILD apcupsd-3.14.7.ebuild 4064 RMD160 5a425754c8cc4e686743de3fa5bad83320f33b66 SHA1 58e58aa8ba4af0d15588a226db19f054e4ee2325 SHA256 5eeb67413174f56cca3f961b41a792a7e64e0ad33b8e53d05b407df71f6621ed
-EBUILD apcupsd-3.14.8-r1.ebuild 3881 RMD160 fe7625ff9ceb8601f7b5a2ca0bf840544f8649f5 SHA1 5432bc98e54ecf81073af7641bf0147090881cdc SHA256 55be9df14e250691ad117906de3457676d2a37ed4f6bac35725839d93fed838d
-MISC ChangeLog 23809 RMD160 46b6bc9e7191c8e82bdfc11f23d682c08ab96fcf SHA1 94a882d13435bfba752d130e3722f80e731901eb SHA256 f1e328bf81c9ed571f07145e1dfcd8eddd56b0042a585d05cf8e4873d5578a25
+EBUILD apcupsd-3.14.7.ebuild 4050 RMD160 bacec1826beb18300650697b5c5c7d0e8decbdb5 SHA1 638178843d21853e5b544101355b3457322a2c42 SHA256 4816de63a738b4c3d8a1df6dcef37544bb8ac83e66ed6fbe0fc16b625963598c
+EBUILD apcupsd-3.14.8-r1.ebuild 3865 RMD160 a99e8b411be4201bd1409fefd79054fe78d1918d SHA1 9c7d014323423208d01dfac75749e868e4321062 SHA256 8e9a4f1a79e2e78db5bba784dc46617d1045e987c4431c7a837a043107e73193
+MISC ChangeLog 23936 RMD160 e221c0cab43e4b8968ec98d67bd7ffa073b81e22 SHA1 1c501e9c1b8ced4d8ba36e28f384b02eb443b888 SHA256 cbc778c294098c8a55ab6a1816a9872543d7810c6a198a7cb9e57d7fff050e9f
 MISC metadata.xml 237 RMD160 2a4fab832a64fbdafe2cd6f59b141b2aa80797ac SHA1 75878fb1a17b8617882c9e02331a6643d647882b SHA256 368acc29aa9214adaa137c17b114b16c6a021c4dfc9efa5f3440e968db04a9b3
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAk1+fI4ACgkQAiZjviIA2XjyLQCeOduIFgm3bixSQO02T2Clc/Uq
-xeMAoJwtnSsouqWaN/hHjlx+rrw2mVK1
-=5OhK
+iEYEARECAAYFAk28TakACgkQuQc30/atMkBKhwCeIzU3/UQiDoe1fABW3SysV7Sx
+p0MAn36a3H8zy7FJ7zn0Df+XvtIgrgJc
+=Ssrw
 -----END PGP SIGNATURE-----
